--- a/design/css/pricing-tool.css
+++ b/design/css/pricing-tool.css
@@ -19,6 +19,99 @@ bootstrap overrides
 END bootstrap overrides
  */
 
+/* datepicker override */
+
+#ui-datepicker-div {
+    display: none;
+}
+
+.ui-datepicker {
+    width: 80%;
+    margin: auto;
+    background-color: #dfdfdf;
+    padding: 5px;
+    border: 1px solid black;
+}
+
+.ui-datepicker-today {
+    background-color: #a90ef5;
+    color: white;
+}
+
+.ui-datepicker-calendar {
+    border-top: 1px solid #8c8c8c;
+    border-left: 1px solid #8c8c8c;
+    background-color: #f2f2f2;
+    width: 100%;
+    text-align: center;
+}
+
+.ui-datepicker tr td {
+    width:12%; 
+    border-right: 1px solid #8c8c8c;
+    border-bottom: 1px solid #8c8c8c;
+    height: 20px;
+}
+
+.ui-datepicker-calendar tr td:hover {
+    background-color: #337AB7;
+    color: white;
+}
+
+.ui-state-default {
+    font-weight: bold;
+    color: #5a595a;
+}
+
+.ui-state-default:hover,
+.ui-datepicker-today .ui-state-default {
+    color: white;
+}
+
+.ui-state-default:hover{
+    text-decoration: none;
+}
+
+.ui-state-hover {
+    font-style: normal;
+}
+
+.ui-datepicker-calendar thead {
+    display: none;
+}
+
+.ui-datepicker-header {
+    position: relative;
+    height: 30px;
+}
+
+.ui-datepicker-title {
+    left: 20%;
+    width: 60%;
+    text-align: center;
+    font-weight: bold;
+}
+
+.ui-datepicker-header>a,
+.ui-datepicker-header>.ui-datepicker-title {
+    position: absolute;
+}
+
+.ui-datepicker-next {
+    left: 80%;
+}
+
+.ui-datepicker-header>a {
+    width: 20%;
+}
+
+
+.ui-priority-secondary {
+    font-weight: normal;
+    color: #b7b7b7;
+}
+/* END datepicker override */
+
 .progress-value {
     position:absolute;
     right:0;
@@ -53,7 +146,7 @@ END bootstrap overrides
 
 .pt-progress-bar>.progress {
     display: inline-block;
-    width: 23.78%;
+    width: 23.70%;
     text-align: center;
     border-radius: 0px;
     margin-bottom: 0;
@@ -297,13 +390,11 @@ END bootstrap overrides
     height: 207px;
 }
 
-.pt-date-availability-selector:hover {
-    background: url('../img/pt-date-availability-selector-hover.png') 0 0 no-repeat;
+.pt-choose-time-format {
+    margin: auto;
+    text-align: center;
 }
 
-.pt-date-availability-active {
-    background: url('../img/pt-date-availability-active.png') 0 0 no-repeat;
-}
 /* svg hover state */
 
 .pt-language-selector:hover g,
@@ -329,10 +420,10 @@ END bootstrap overrides
 
 .pt-inner-circle-content-wrapper {
     position: absolute;
-    top: 150px;
-    left: 160px;
+    top: 130px;
+    left: 170px;
     width: 260px;
-    height: 330px;
+    height: 350px;
     z-index: 100;
 }
 
@@ -368,6 +459,7 @@ END bootstrap overrides
 
 .pt-questions-content {
     display: none;
+    margin: 5% auto;
 }
 
 .pt-questions-content .row {
@@ -407,6 +499,18 @@ END bootstrap overrides
     width: 100%;
 } 
  
+.pt-verbatim-translation-languages {
+    display: none;
+}
+
+.pt-verbatim-translation-languages {
+    margin-left: 30%;
+}
+
+.pt-verbatim-translation-languages>div {
+    margin: 10px;
+}
+
 .pt-codebooks-content {
     display: none;
 }
@@ -417,6 +521,7 @@ END bootstrap overrides
 
 .pt-date-availability-content {
     display: none;
+    margin-top: 30px;
 }
 
 .pt-results-wrapper {
@@ -497,6 +602,7 @@ buttons
 
 .button-verbatim-translation {
     background: #aaaaaa;
+    height: 30px;
 }
 
 .button-accept {
@@ -511,6 +617,10 @@ buttons
 
 .button-verbatim-translation-selected {
     background: #000cad;
+}
+
+.button-verbatim-translation-selected:focus {
+    color: white;
 }
 
 .button-cancel {
